Name:                mary
Version:             0.1
Description:         Profitability estimator
License:             GPL
License-file:        LICENSE
Author:              Marcin Bilski
Maintainer:          gyamtso@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable mary
    Main-is:           Mary.hs
    Build-Depends:     base >= 3 && < 5, normaldistribution >= 1.1, erf >= 2, random >= 1
    ghc-options:       -Wall